--- a/style.css
+++ b/style.css
@@ -202,3 +202,149 @@ fill: #2874f0;
   display: flex;
   align-items: center;
 }
+.products-container {
+  width: 90%;
+  margin: 10px auto;
+  border-top: 1px solid #eaeaea;
+  border-radius: 2px;
+}
+.deal-ad-container {
+  height: 350px;
+  display: flex;
+}
+.deal-ad-container-2{
+  height: 350px;
+  display: flex;
+}
+.deal-container {
+  width: 85%;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 8%);
+}
+.deal-of-the-day {
+  height: 20%;
+  display: flex;
+  box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
+}
+.deal-text-timer {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.deal-text {
+  font-size: 24px;
+  margin-left: 20px;
+}
+.timer{
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+.time{
+  color: gray;
+  margin-left: 10px;
+}
+.timer .material-symbols-outlined{
+  font-size: 20px;
+}
+.view-all {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 10px;
+}
+.view-all-button {
+  background: #2874f0;
+    color: white;
+    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%);
+    border: none;
+    padding: 10px 20px;
+    font-size: 13px;
+    font-weight: bold;
+    cursor: pointer;
+}
+/* products list 1 */
+.products-list-1 {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  overflow-x: auto;
+  margin-top: 5px;
+}
+.product {
+  height: 100%;
+  width: 200px;
+  margin-left: 20px;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.product:hover .product-img{
+  transform: scale(1.1);
+}
+.product-img {
+  height: 200px;
+  width: 200px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.product-name {
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 15px;
+  white-space: nowrap;
+}
+.product-price {
+  font-size: 14px;
+  color: #388e3c;
+  padding-top: 8px;
+}
+.product-company-name {
+  opacity: .6;
+  padding-top: 7px;
+  font-size: 14px;
+}
+.product img {
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+}
+.ad-container{
+  background-color: #fff;
+  width: 100%;
+  margin-left: 10px;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 8%);
+  background-image: url(https://rukminim1.flixcart.com/fk-p-flap/278/278/image/7593e7b6640822c1.jpg?q=90);
+  background-repeat: no-repeat;
+  background-position-y: bottom;
+  display: flex;  
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+} 
+.more-products{
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.view-all-ad{
+  background: #2874f0;
+  color: white;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%);
+  border: none;
+  padding: 12px 20px;
+  font-size: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
