--- a/style.css
+++ b/style.css
@@ -348,3 +348,20 @@ fill: #2874f0;
   font-weight: bold;
   cursor: pointer;
 }
+.music-book-container{
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 8%);
+}
+.book-music-title{
+  min-width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.shop-now{
+  margin: 2px 20px;
+  font-size: 14px;
+  color: #acacac;
+}
