--- a/style.css
+++ b/style.css
@@ -365,3 +365,99 @@ fill: #2874f0;
   font-size: 14px;
   color: #acacac;
 }
+/* tablet view */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .header-rightpan{
+    justify-content: flex-end;
+  }
+  .deal-text{
+    font-size: 18px;
+  }
+  .timer{
+    font-size: 16px;
+  }
+  .deal-ad-container{
+    flex-direction: column;
+  }
+  .deal-container{
+    width: 100%;
+    height: 250px;
+  }
+  .ad-container{
+    margin : 5px auto;
+    height: 100px;
+    background-repeat: repeat;
+  }
+  .deal-ad-container-2{
+    height: 250px;
+    width: 100%;
+  }
+  .more-products{
+    font-size: 20px;
+    margin: 0;
+  }
+}
+/* Mobile view */
+@media screen and (max-width: 768px) {
+  .category-pannel{
+    display: none;
+  }
+  .deal-text{
+    font-size: 14px;
+  }
+  .timer{
+    font-size: 12px;
+  }
+  .deal-text-timer {
+    width: 60%;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .header-main_container{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 112px;
+  }
+  .header-leftpan{
+    justify-content: center;
+    width: 100%;
+  }
+  .header-rightpan{
+    justify-content: center;
+    min-width: 320px;
+  }
+  .header-login{
+    margin: 0;
+  }
+  .deal-ad-container{
+    flex-direction: column;
+    height: 480px;
+  }
+  .deal-container{
+    width: 100%;
+    height: 300px;
+  }
+  .ad-container{
+    margin : 5px auto;
+    height: 180px;
+    background-size: contain;
+    background-position-x: center;
+  }
+  .deal-ad-container-2{
+    height: 300px;
+  }
+  .more-products{
+    font-size: 20px;
+  }
+  .deal-of-the-day{
+      height: 15%;
+  }
+}
+@media screen and (max-width:414px) {
+    .ad-container{
+      background-size: contain;
+    }
+}
